Overflow fix

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -3,7 +3,10 @@
   ---------------------------------------------*/
   
 
-
+body.indexClass, html.indexHtml {
+max-width: 100%;
+overflow-x: hidden;
+}
   
 .row {
 	  padding-top: 3.6rem;
